--- a/error/src/main/res/layout/activity_default.xml
+++ b/error/src/main/res/layout/activity_default.xml
@@ -12,11 +12,13 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:gravity="center"
-        android:justificationMode="inter_word"
+        android:justificationMode="inter_character"
         android:text="@string/ask_for_error_log"
-        android:textColor="#212121"
-        android:textSize="16sp"
+        android:textColor="@color/textview_text_color"
+        android:textSize="17sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,7 +28,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/rodapeTextView"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
         tools:layout_editor_absoluteX="16dp">
 
@@ -44,7 +46,7 @@
             android:id="@+id/button_copy_error_log"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/button_shape_verde"
             android:text="Copiar para area de transferência"
             android:textAllCaps="false"
@@ -55,7 +57,7 @@
             android:id="@+id/button_share_error_log"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/button_shape_azul"
             android:text="Compartilhar os erros encontrados"
             android:textAllCaps="false"
@@ -66,7 +68,7 @@
             android:id="@+id/button_share_email_log"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/button_shape_vermelho"
             android:text="Enviar por email"
             android:textAllCaps="false"
@@ -77,7 +79,7 @@
             android:id="@+id/button_save_error_log"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/button_shape_verde_agua"
             android:text="Salvar no seu dispositivo os erros encontrados"
             android:textAllCaps="false"
@@ -98,12 +100,13 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/rodapeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
         android:gravity="center"
         android:text="@string/copyright_info"
-        android:textColor="#212121"
+        android:textColor="@color/textview_text_color"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
